package inscryption.carte;

public abstract class Carte
{
    protected String m_nom;
    protected int m_pv;

    public Carte(String nom, int pv)
    {
        m_nom = nom;
        m_pv = pv;
    }

    public String getNom()
    {
        return m_nom;
    }

    public int getPv()
    {
        return m_pv;
    }

    public abstract String getInfos();
}
