package inscryption.engine;

public class Pioche
{

    public Pioche(){}
}
